# car_sales_RustyBargain

./: .dockerignore  .gitignore  Dockerfile  README.md  car_sales_RustyBargain  car_sales_RustyBargain.ipynb  environment.yml  main.py  pyproject.toml  requirements.txt  rusty_bargain_project.py
artifacts/reports/: final_outliers_iqr.csv  final_price_by_brand.csv  final_price_by_fuel_type.csv  final_price_by_gearbox.csv  final_price_by_vehicle_type.csv  final_stats.csv  original_data_statistics.csv  preprocessed_stats.csv  selected_models.csv  selected_models.json  unduplicated_data_stats.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: params.yaml  paths.yaml  paths.yaml.bak
docs/: README_EN.md
insight/: EDA_description.py  EDA_plots.py
models/: models.py
notebooks/: exploration.ipynb
other/: car_sales_RustyBargain.ipynb  rusty_bargain_project.py
outputs/.joblib/: LGBM_model_log.joblib  RF_model_log.joblib  XGBoost_model_log.joblib
outputs/models/: CB_model.py  CatBoost_model.joblib  DT_model_log.joblib  LGBM_model.joblib  LGBM_model.py  LR_model.py  RF_model.py  RT_model.py  XGB_model.py
outputs/preprocessed/: features_eng.py
outputs/reports/: final_statistics_data.csv  models_table_result.csv  preprocessed_data_statistics.csv  stats_price(ori)_price(log).csv
preprocessing/: a_00_Preprocessed.py  a_01_features_eng.py  a_02_encode.py  a_03_train_test_split.py  a_04_params_models.py  a_05_models.py  a_06_save_outputs.py  main.py  test_pipeline.py  utils.py
src/models/: a_04_tune_hyperparams.py  a_05_train.py  predict.py  predict_encoder.py
src/preprocessing/: a_00_data_cleaning.py  a_01_feature_engineering.py  a_02_encoding.py  a_03_split_data.py  a_06_save_results.py
src/utils/: config_manager.py  helpers.py  logging_config.py
src/visualization/: EDA_description.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_cleaning.py  (+2 more)
(+6 files in other folders)
